--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.handyman-query=select email,password, active from handyman where email=?
+spring.queries.handymanrole-query=select h.email, r.role from handyman h inner join user_role ur on(h.id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where h.email=?
 
 # ==============================================================
 # = Initialize the database using data.sql script
