--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/handyman_db?useSSL=true
+spring.datasource.url = jdbc:mysql://localhost:3306/handyman_db
 spring.datasource.username = root
 spring.datasource.password = coderslab
 
